--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,18 @@
 .screen {
     width: 100%;
     height: 60px;
+    padding: 3px;
     margin-bottom: 15px;
     background: #d7d7d7;
     border-radius: 5px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+#current-data {
+    min-height: 27px;
 }
 
 .keyboard {
@@ -62,4 +71,8 @@
     background: #1375e2;
     text-align: center;
     border-radius: 3px;
+}
+
+#current-data {
+    font-size: 1.5rem;
 }
