--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,13 @@
 
 .screen {
     width: 100%;
-    height: 60px;
+    min-height: 60px;
     padding: 3px;
     margin-bottom: 15px;
     background: #a6a6a6;
     border-radius: 5px;
     font-weight: bold;
+    overflow: hidden;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
