--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,22 @@
 
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto Mono', monospace;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    padding-top: 50px;
 }
 
 .calculator {
     width: 290px;
     height: fit-content;
-    margin: 50px auto;
     padding: 5px;
+    margin: 50px auto;
+    margin-top: 0;
     background: #ffe008;
     border-radius: 20px;
     box-shadow: 0px 3px 4px 1px #a4a2a2;
@@ -140,3 +146,23 @@
 /* inside of the screen */
 
 #firstTerm, #operator, #secondTerm, #result, #current-data {font-family: 'Dosis', sans-serif;}
+
+.logo-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.toGithub-link {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+}
+
+.github-logo {
+    width: 60px;
+    height: 60px;
+    filter: invert(81%) sepia(75%) saturate(582%) hue-rotate(348deg) brightness(100%) contrast(103%);
+}
